--- a/app/src/main/res/layout/menu_dot.xml
+++ b/app/src/main/res/layout/menu_dot.xml
@@ -11,13 +11,13 @@
         android:layout_height="6dp"
         android:background="@drawable/bg_circle">
 
-        <TextView
+       <!-- <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:layout_weight="1"
-            tools:text="4" />
+            tools:text="" />-->
     </LinearLayout>
 
 </LinearLayout>
