--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,26 +7,27 @@
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/nav_org" />
         <item
-            android:id="@+id/nav_photos"
-            android:icon="@drawable/ic_photo_library_black_24dp"
-            android:title="@string/nav_photos" />
+            android:id="@+id/nav_calendar"
+            android:icon="@drawable/ic_date_range_black_24dp"
+            android:title="@string/nav_calendar" />
         <item
-            android:id="@+id/nav_movies"
-            android:icon="@drawable/ic_local_movies_black_24dp"
-            android:title="@string/nav_movies" />
-
-        <item
-            android:id="@+id/nav_notifications"
+            android:id="@+id/nav_messages"
             android:icon="@drawable/ic_notifications_black_24dp"
-            android:title="@string/nav_notifications" />
-
+            android:title="@string/nav_messages" />
         <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_perm_contact_calendar"
+            android:title="@string/nav_profile" />
+
+
+
+     <!--   <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/nav_settings" />
+            android:title="@string/nav_settings" />-->
     </group>
 
-    <item android:title="Other">
+ <!--   <item android:title="Other">
         <menu>
             <item
                 android:id="@+id/nav_about_us"
@@ -35,6 +36,6 @@
                 android:id="@+id/nav_privacy_policy"
                 android:title="@string/privacy_policy" />
         </menu>
-    </item>
+    </item>-->
 
 </menu>
