--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,5 +15,9 @@
     <dimen name="row_layout_marginRight">5dp</dimen>
     <dimen name="row_layout_marginTop">2dp</dimen>
     <dimen name="row_layout_marginBottom">2dp</dimen>
+    <dimen name="app_bar_height">256dp</dimen>
+    <dimen name="page_keylines">72dp</dimen>
+    <dimen name="md_keylines">16dp</dimen>
+    <dimen name="page_titles">20sp</dimen>
 
 </resources>
