--- a/app/src/main/res/layout/activity_caldroid.xml
+++ b/app/src/main/res/layout/activity_caldroid.xml
@@ -23,7 +23,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/customize_button"
+                android:id="@+id/btnAdd"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -38,7 +38,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textview"
+            android:id="@+id/calendar_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
