--- a/app/src/main/res/layout/event_fragment.xml
+++ b/app/src/main/res/layout/event_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
 
-    //TITLE
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal" android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
             android:inputType="text"
             android:imeOptions="actionDone" />
     </LinearLayout>
-    //ORG
+
     <LinearLayout
 
         android:layout_alignParentStart="true"
@@ -70,7 +70,8 @@
                     android:id="@+id/in_date_s"
                     android:layout_marginTop="5dp"
 
-                    android:text="start date" />
+                    android:hint="@string/start_date"
+                    android:enabled="false" />
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -86,7 +87,9 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/in_time_s"
-                    android:text="start time" />
+                    android:hint="@string/start_time"
+                    android:inputType="time"
+                    android:enabled="false"/>
 
                 <Button
                     android:layout_width="wrap_content"
@@ -104,8 +107,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/in_date_e"
                     android:layout_marginTop="5dp"
-
-                    android:text="end date" />
+                    android:enabled="false"
+                    android:hint="@string/end_date" />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -122,8 +125,9 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/in_time_e"
-
-                    android:text="end time" />
+                    android:enabled="false"
+                    android:inputType="time"
+                    android:hint="@string/end_time" />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -139,7 +143,7 @@
 
     </LinearLayout>
 
-    //DETAILS
+
 
     <LinearLayout
         android:orientation="horizontal"
@@ -164,7 +168,7 @@
 
     </LinearLayout>
 
-    //BUTTONS
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
