--- a/app/src/main/res/layout/dialog_fragment_all_orgs.xml
+++ b/app/src/main/res/layout/dialog_fragment_all_orgs.xml
@@ -7,6 +7,26 @@
 
 
     <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <TextView
+
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/orgName"
+            android:text="orgName"
+            android:layout_width="match_parent"
+            android:hapticFeedbackEnabled="false"
+            android:height="30dp"
+            tools:textSize="18sp"
+            android:layout_weight="0.8" />
+
+    </LinearLayout>
+
+    <LinearLayout
 
         android:layout_alignParentStart="true"
         android:orientation="horizontal"
@@ -22,14 +42,18 @@
             android:layout_height="wrap_content"
             android:id="@+id/lblOrg"
             android:text="@string/select_organization"
-            android:layout_width="wrap_content"
-            android:layout_weight="0.66" />
+            android:layout_width="229dp"
+            android:hapticFeedbackEnabled="false"
+            android:height="30dp"
+            tools:textSize="18sp" />
+
         <Spinner
             android:layout_width="234dp"
             android:layout_height="wrap_content"
             android:id="@+id/orgSpin"
             android:layout_marginTop="10dp"
             />
+
     </LinearLayout>
 
 
@@ -74,6 +98,7 @@
             android:id="@+id/btn_date_e"
             />
     </LinearLayout>
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -86,7 +111,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnSaveOrg"
             android:layout_weight="1"
-            />
+            android:onClick="onbtnSave_Click" />
 
         <Button
             android:text="@string/btnRemove"
