--- a/app/src/main/res/layout/activity_caldroid.xml
+++ b/app/src/main/res/layout/activity_caldroid.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+
+
 
         <LinearLayout
             android:id="@+id/calendar1"
@@ -16,7 +20,7 @@
             android:orientation="vertical">
         </LinearLayout>
 
-        <LinearLayout
+<!--        <LinearLayout
             android:id="@+id/button_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,7 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/customize"/>
+                android:text="@string/add_new_event"/>
 
             <Button
                 android:id="@+id/show_dialog_button"
@@ -35,12 +39,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/show_dialog"/>
-        </LinearLayout>
+        </LinearLayout>-->
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/calendar_textview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"/>-->
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addNew"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:backgroundTint="@color/colorPrimary"
+            app:srcCompat="@android:drawable/ic_input_add" />
 
     </LinearLayout>
 </ScrollView>
