--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="mash">#964a4a</color>
+
     <color name="blue">#ff33b5e5</color>
     <color name="white">#ffffff</color>
 
@@ -22,5 +22,6 @@
 
     <color name="caldroid_333">#333</color>
     <color name="caldroid_555">#555</color>
-    <color name="caldroid_light_red">#ff7f7f</color>
+    <color name="caldroid_light_red">#ff7f7c</color>
+    <color name="caldroid_dark_red">#964a4a</color>
 </resources>
