--- a/app/src/main/res/layout/dialog_fragment_all_orgs.xml
+++ b/app/src/main/res/layout/dialog_fragment_all_orgs.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         >
 
         <TextView
@@ -17,7 +17,6 @@
             android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:id="@+id/orgName"
-            android:text="orgName"
             android:layout_width="match_parent"
             android:hapticFeedbackEnabled="false"
             android:height="30dp"
@@ -61,6 +60,7 @@
         android:orientation="horizontal" android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1">
+
         <EditText
             android:layout_width="200dp"
             android:layout_height="wrap_content"
