--- a/app/src/main/res/layout/fragment_org_profile.xml
+++ b/app/src/main/res/layout/fragment_org_profile.xml
@@ -65,11 +65,13 @@
                 android:layout_marginBottom="@dimen/md_keylines"
                 android:id="@+id/lblemail" />
 
-            <TextView
-                android:id="@+id/email"
-                android:layout_width="wrap_content"
+            <EditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="o@gmail.com" />
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:id="@+id/email"
+                android:text="bla bla" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -81,11 +83,13 @@
                 android:layout_marginTop="@dimen/md_keylines"
                 android:id="@+id/lbladdress" />
 
-            <TextView
-                android:id="@+id/address"
-                android:layout_width="wrap_content"
+            <EditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="rupin5 k.ata" />
+                android:inputType="textPersonName"
+                android:text="Name"
+                android:ems="10"
+                android:id="@+id/address" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -97,12 +101,14 @@
                 android:layout_marginBottom="@dimen/md_keylines"
                 android:layout_marginTop="@dimen/md_keylines"
                 android:id="@+id/lblPass" />
-            <TextView
-                android:id="@+id/password"
-                android:layout_width="wrap_content"
-                android:visibility="invisible"
+
+            <EditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="****" />
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/password" />
+
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
