--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,7 @@
                     android:layout_weight="1.3"
                     android:gravity="center_vertical"
                     android:textStyle="bold"
-                    android:text="Register with us"
+                    android:text="@string/welcome"
                     android:textSize="20dp" />
             </LinearLayout>
 
